# Comptabilit-05

./: .gitignore  .replit  README.md  USER_GUIDE.md  accounting_processor.py  add_profile_pictures.py  ai_analyzer.py  app.py  app_diagnostics.py  app_sqlite.py  base.html  cache_manager.py  check_admin.py  check_all_routes.py  check_db_tables.py  check_error_handlers.py  check_logs.py  check_requirements.py  check_routes.py  check_templates.py  cleanup.py  cleanup_advanced.py  config.py  create_admin.py  create_bilan_example.py  create_example_pdfs.py  create_notification_sound.py  create_social_posts.py  create_test_data.py  db_backup.py  db_connection_manager.py  db_helper.py  db_initialize.py  db_sqlite_adapter.py  detailed_db_check.py  diagnose_app.py  document_generator.py  ecriture_generator.py  enable_file_logging.py  enhance_error_handling.py  (+70 more)
archived/: auth.py.bak
attached_assets/: tous_les_exercices_comptabilite_ohada.json
static/css/: 3d-effects.css  custom.css  dashboard-widgets.css  dashboard.css  journal.css  main.css  modern-nav.css  responsive.css  social.css  theme-colors.css
static/js/: 3d-animation.js  app.js  button-activator.js  button-fix.js  chart-config.js  error-handler.js  exercise_form.js  form-validator.js  page-optimizer.js  password_toggle.js  profile_image_preview.js  reactions.js  realtime-enhanced.js  realtime.js  responsive-helper.js
templates/: about.html  base.html  dashboard.html  formulaire.html  index.html  login.html  maintenance.html  register.html  resultats.html  search.html  text_processing.html  welcome.html
(+46 files in other folders)
